@@ -1,3 +1,8 @@
+2004-09-09  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b172
+
+	* Fix: manage users, create user, edit_field.php, add_photos.php, save_photos.php,
+	       add_form.inc
+
 2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b171
 
 	* Fix: view_album wasn't honoring $page
